--- a/mediaLargestComp.css
+++ b/mediaLargestComp.css
@@ -64,6 +64,8 @@
   #schoolName {
     font-size: 20px;
     font-weight: normal;
+    margin-top: 16px;
+    margin-bottom: -2px;
   }
 
   #rallyName {
@@ -211,7 +213,7 @@
   }
 
   #dbtnLabel {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 500;
     line-height: 5px;
   }
@@ -220,6 +222,7 @@
     font-size: 12px;
     font-weight: normal;
     line-height: 0px;
+    color: #828282;
   }
 
   #dbtnBig {
@@ -344,14 +347,16 @@
   }
 
   #tripled2 {
-    font-size: 30px;
-    color: red;
+    font-size: 36px;
+    color: #ea2554;
     margin-top: 130px;
+    font-weight: 200;
   }
 
   #one3 {
-    font-size: 60px;
-    color: red;
+    font-size: 80px;
+    color: #ea2554;
+    font-weight: 650;
   }
 
   #bannerTitle {
@@ -370,7 +375,7 @@
   #bannerText {
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 16px;
     line-height: 36px;
   }
 
@@ -421,13 +426,14 @@
     margin-bottom: 10px;
   }
   #progressLabelTeam {
-    font-size: 14px;
-    font-weight: normal;
+    font-size: 16px;
+    font-weight: 800;
   }
 
   #progressLabelTeam2 {
     font-size: 10px;
     font-weight: normal;
+    color: #828282;
   }
 
   #donorLabel1 {
@@ -459,8 +465,8 @@
   /*Donors Section================================================================================*/
 
   #donorTitle {
-    margin-top: 100px;
-    margin-bottom: 60px;
+    margin-top: 120px;
+    margin-bottom: 50px;
     font-weight: 200;
     font-size: 60px;
     text-align: center;
@@ -468,7 +474,7 @@
 
   #donorText {
     margin-top: 24px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     font-weight: normal;
     font-size: 20px;
     text-align: center;
@@ -478,7 +484,7 @@
   #donorCountGoal {
     font-style: normal;
     font-weight: 800;
-    font-size: 22px;
+    font-size: 36px;
     line-height: 28px;
     margin-left: 60px;
   }
@@ -490,10 +496,11 @@
   #donorLabel {
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 20px;
     margin-left: 45px;
     margin-right: 50px;
+    color: #828282;
   }
 
   #slash {
@@ -507,7 +514,7 @@
   #donorName {
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 30px;
     margin-left: 15px;
   }
@@ -515,7 +522,7 @@
   #donorAmt {
     font-style: normal;
     font-weight: 300;
-    font-size: 18px;
+    font-size: 22px;
     line-height: 25px;
     margin-left: 80px;
   }
@@ -548,7 +555,9 @@
     margin-top: 24px;
     margin-bottom: 30px;
     font-weight: normal;
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 26px;
+    color: #4f4f4f;
   }
 
   #matcherCard {
