--- a/mediaSmallMobile.css
+++ b/mediaSmallMobile.css
@@ -20,6 +20,8 @@
     font-size: 16px;
     font-weight: normal;
     line-height: 28px;
+    margin-top: 16px;
+    margin-bottom: -2px;
   }
 
   #rallyName {
@@ -174,7 +176,7 @@
   }
 
   #dbtnLabel {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 500;
     line-height: 5px;
   }
@@ -183,6 +185,7 @@
     font-size: 10px;
     font-weight: normal;
     line-height: 0px;
+    color: #828282;
   }
 
   #dbtnBig {
@@ -332,12 +335,12 @@
 
   #tripled2 {
     font-size: 22px;
-    font-weight: normal;
-    color: red;
+    font-weight: 200;
+    color: #ea2554;
   }
 
   #one3 {
-    color: red;
+    color: #ea2554;
     font-size: 45px;
     font-weight: 500;
   }
@@ -412,13 +415,14 @@
   }
 
   #progressLabelTeam {
-    font-size: 14px;
-    font-weight: normal;
+    font-size: 16px;
+    font-weight: 800;
   }
 
   #progressLabelTeam2 {
     font-size: 10px;
     font-weight: normal;
+    color: #828282;
   }
 
   #donorLabel1 {
@@ -485,6 +489,7 @@
     line-height: 20px;
     margin-left: 45px;
     margin-right: 50px;
+    color: #828282;
   }
 
   #slash {
@@ -541,6 +546,7 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
+    color: #4f4f4f;
   }
 
   #matcherCard {
